@@ -1,3 +1,9 @@
+1993-12-02  dickey@software.org
+
+	* src/ftree.c: forgot to set 'showdiff' in 'uprow()'
+
+	* src/ded.c: 'resleep()' needs a call on 'refresh()' !
+
 1993-12-01  dickey@software.org
 
 	* src/dedview.c: clear workspace if I adjust its size
